# MediCare-AI---Intelligent-Medical-Knowledge-Assistant

./: README.md  app.py  extra code.txt  main.py  pyproject.toml  requirements.txt  setup.py  vectore_store_db.py
research/: trials.ipynb
src/: loader.py  prompt.py
static/: style.css
templates/: index.html
